@@ -196,15 +196,25 @@
 <p>This template is used for showing the details of one person (Contact-Person for a page). </p>
 
 
-<!-- ###TEMPLATE_BOX### -->
+<!-- ###TEMPLATE_BOX_HEADER### -->
 <div class="tx_bzdstaffdirectory_box">
-	<p>###HEADER_CONTACTPERSON###</p>
-	<p>###IMAGE###</p>
-	<p><!-- ###FIELD_WRAPPER_TITLE### -->###TITLE###&nbsp;<!-- ###FIELD_WRAPPER_TITLE### -->###FIRST_NAME###&nbsp;###LAST_NAME###
-	<br />###FUNCTION###</p>
-	<p>###LINK_DETAIL###</p>
+	<!-- ###FIELD_WRAPPER_HEADER_CONTACTPERSON### -->
+		<p>###HEADER_CONTACTPERSON###</p>
+	<!-- ###FIELD_WRAPPER_HEADER_CONTACTPERSON### -->
+<!-- ###TEMPLATE_BOX_HEADER### -->
+
+<!-- ###TEMPLATE_BOX_PERSON### -->
+	<div class="tx_bzdstaffdirectory_box_person">
+		<p>###IMAGE###</p>
+		<p><!-- ###FIELD_WRAPPER_TITLE### -->###TITLE###&nbsp;<!-- ###FIELD_WRAPPER_TITLE### -->###FIRST_NAME###&nbsp;###LAST_NAME###
+		<br />###FUNCTION###</p>
+		<p>###LINK_DETAIL###</p>
+	</div>
+<!-- ###TEMPLATE_BOX_PERSON### -->
+
+<!-- ###TEMPLATE_BOX_FOOTER### -->
 </div>
-<!-- ###TEMPLATE_BOX### -->
+<!-- ###TEMPLATE_BOX_FOOTER### -->
 
 </body>
 </html>
